# MCP-LED-control

./: README.md  pyproject.toml
Serial_LED_control/src/: main.cpp
src/: mcp_client_anthropic.py  mcp_server_serial_led_control.py
