[project]
name = "mcp-led-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.67.0",
    "openai>=1.102.0",
    "mcp[cli]>=1.14.0",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
]
